--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   email_validator: 2.1.17
   outline_search_bar: 2.3.0
   flutter_html: 2.2.1
+  double_back_to_close_app: 2.1.0
   flutter: 
     sdk: flutter
   flutter_localizations: 
