--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   flutter_html: 2.2.1
   double_back_to_close_app: 2.1.0
   flutter_speed_dial: 6.0.0
+  swipe: 0.0.1
+  simple_gesture_detector: 0.2.0
+  liquid_swipe: 3.0.0
+  flutter_swipe_action_cell: 3.0.4
   flutter: 
     sdk: flutter
   flutter_localizations: 
