--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,8 @@ description: A new Flutter project.
 environment: 
   sdk: '>=2.18.0 <3.0.0'
 
-dependencies: 
+dependencies:
+  map_location_picker: ^1.0.1
   cupertino_icons: ^1.0.2
   get: 4.6.5
   fluttertoast: 8.0.9
