--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 environment: 
   sdk: '>=2.18.0 <3.0.0'
 
-dependencies:
+dependencies: 
   map_location_picker: ^1.0.1
   cupertino_icons: ^1.0.2
   get: 4.6.5
@@ -27,6 +27,7 @@ dependencies:
   simple_gesture_detector: 0.2.0
   liquid_swipe: 3.0.0
   flutter_swipe_action_cell: 3.0.4
+  flutter_typeahead: 4.1.1
   flutter: 
     sdk: flutter
   flutter_localizations: 
